Double scrollbars solved

--- a/Shared/css/style.css
+++ b/Shared/css/style.css
@@ -110,6 +110,7 @@ body {
   width: 100%;
   height: 100%;
   background-color: var(--color-background);
+  overflow: hidden;
 }
 
 table {
